infra/k8s/services/infra-db/pgadmin-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pgadmin-auth
  namespace: infra-db
spec:
  basicAuth:
    secret: pgadmin-basicauth
